// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders add form correctly 1`] = `
<form
  onReset={[Function]}
  onSubmit={[Function]}
>
  <div>
    <h2>
      Eintrag bearbeiten
    </h2>
    <div>
      <div>
        <label
          htmlFor=":r3:"
        >
          Vorname*
        </label>
        <input
          id=":r3:"
          name="firstname"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
      <div>
        <label
          htmlFor=":r4:"
        >
          Nachname*
        </label>
        <input
          id=":r4:"
          name="lastname"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
      <div>
        <label
          htmlFor=":r5:"
        >
          E-Mail*
        </label>
        <input
          id=":r5:"
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          type="email"
          value=""
        />
      </div>
    </div>
  </div>
  <div>
    <div>
      <button
        className="button"
        type="reset"
      >
        Abbrechen
      </button>
      <button
        className="button"
        type="submit"
      >
        Speichern
      </button>
    </div>
  </div>
</form>
`;

exports[`renders update form correctly 1`] = `
<form
  onReset={[Function]}
  onSubmit={[Function]}
>
  <div>
    <h2>
      Eintrag bearbeiten
    </h2>
    <div>
      <div>
        <label
          htmlFor=":r0:"
        >
          Vorname*
        </label>
        <input
          id=":r0:"
          name="firstname"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
      <div>
        <label
          htmlFor=":r1:"
        >
          Nachname*
        </label>
        <input
          id=":r1:"
          name="lastname"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
      <div>
        <label
          htmlFor=":r2:"
        >
          E-Mail*
        </label>
        <input
          id=":r2:"
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          type="email"
          value=""
        />
      </div>
    </div>
  </div>
  <div>
    <button
      className="button"
      onClick={[Function]}
      type="button"
    >
      Löschen
    </button>
    <div>
      <button
        className="button"
        type="reset"
      >
        Abbrechen
      </button>
      <button
        className="button"
        type="submit"
      >
        Speichern
      </button>
    </div>
  </div>
</form>
`;
